--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "michelson",
   "displayName": "Michelson Syntax",
   "description": "Michelson Syntax by Baking Bad",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "publisher": "baking-bad",
   "icon": "icon.png",
   "engines": {
@@ -15,7 +15,7 @@
     "michelson",
     "tezos",
     "smart contracts",
-    "syntax highlighting"
+    "syntax"
   ],
   "categories": [
     "Programming Languages"
