--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "michelson",
     "tezos",
     "smart contracts",
-    "syntax"
+    "syntax highlighting"
   ],
   "categories": [
     "Programming Languages"
