--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ node_js:
 
 install:
 - npm install -g vsce
+- npm install -g ovsx
 - npm install
 
 script:
@@ -14,6 +15,12 @@ deploy:
   # deploy to vscode extension market
   - provider: script  
     script: vsce publish -p $VSCE_TOKEN --packagePath *.vsix # $VSCE_TOKEN set in travis-ci.org dashboard
+    skip_cleanup: true
+    on:
+      branch: master
+  # deploy to open-vsx extension market
+  - provider: script  
+    script: npx ovsx publish -p $OVSX_TOKEN # $OVSX_TOKEN set in travis-ci.org dashboard
     skip_cleanup: true
     on:
       branch: master
